# multivehicle_simulator

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  build.bash  multivehicle_simulator.repos  package.xml  run.bash  run_no_nvidia.bash
config/: blueboat_control.yaml  blueboat_gz_bridge.yaml  bluerov_gz_bridge.yaml
hooks/: setup.dsv
humble_hybrid/: Dockerfile
humble_hybrid/scripts/: build_px4.sh  build_ros_deps.sh  install_deps.sh  install_qgc.sh
launch/: bluerov.launch.py  bluerov_mission.launch.py  boat.launch.py  boat_control.launch.py  px4_offboard.launch.py  uav_gz.launch.py  uav_odom.launch.py  world.launch.py
mavros_params/: sim_mavros_params.yaml
models/blueboat/: model.config  model.sdf
models/bluerov2/: model.sdf
models/nathan_benderson_park/: model.sdf
models/robotx24/tins/: tins.blend
models/robotx24/tins/blue_tin/: blue_tin.glb  model.config  model.sdf
models/robotx24/tins/green_tin/: green_tin.glb  model.config  model.sdf
models/robotx24/tins/red_tin/: model.config  model.sdf  red_tin.glb
models/robotx26/docking_led/: model.config  model.sdf
models/robotx26/docking_task/: model.config  model.sdf
models/robotx26/docking_task/dock/: docking_link_no_boundary_s.mtl
models/robotx26/docking_task/docking_station_bounded/: docking_station_bounded.glb  model.sdf
models/robotx26/docking_task/docking_station_n/: docking_station_n.glb  model.config  model.sdf
models/robotx26/docking_task/docking_station_s/: docking_station_s.glb  model.config  model.sdf
models/robotx26/docking_task/led/: green_led.mtl  red_led.mtl
models/robotx26/floating_dock_simple/: model.config  model.sdf
models/robotx26/incident_cube/: model.config  model.sdf
models/robotx26/pipe_led/: model.config  model.sdf
models/robotx26/pipe_task/: model.sdf
models/robotx26/pipe_task/meshes/: pipe_1_link.STL  pipe_2_link.STL  pipe_3_link.STL  pipe_4_link.STL  pipe_5_link.STL  pipe_connector_1.STL  pipe_connector_2.STL  pipe_connector_3.STL  pipe_connector_4.STL  pipe_connector_5.STL  pipe_connector_6.STL
models/robotx26/pipe_task/pipe_task_var1/: model.sdf
models/robotx26/pipe_task/pipe_task_var1/meshes/: pipe2_var1.glb
models/robotx26/pipe_task/pipe_task_var2/: model.sdf
models/robotx26/pipe_task/pipe_task_var2/meshes/: pipe2_var2.glb
models/robotx26/pipe_task/pipe_task_var3/: model.config  model.sdf
models/robotx26/pipe_task/pipe_task_var3/meshes/: pipe2_var3.glb
models/robotx26/safe_passage_buoy/: model.config  model.sdf
models/robotx26/sea_floor/: model.config  model.sdf  sand_floor.glb
models/robotx26/sea_floor/materials/scripts/: dirt_tiled.material
models/robotx26/sg_river_course/: model.config  model.sdf
mvsim/: Dockerfile
mvsim/scripts/: setup_dashboard.sh
scripts/: blueboat_mission.py  blueboat_odom_to_tf.py  blueboat_thrust_mixer.py  blueboat_waypoint_controller.py  bluerov_movement.py  bridges.py  dvl_to_mavros.py  ground_truth_to_mavros.py  gz_pose_to_odom.py
src/: PX4OffboardDemo.cpp  PX4OffboardDemo.hpp  RosconPx4OffboardDemo.cpp  RosconPx4OffboardDemo.hpp
tmuxp/: mvsim_debug.yaml
worlds/: nbpark.world  robotx_2026_sg_river.world
